# writing-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.MD  README.md  SYNC.md  kilo.json  package-lock.json  package.json
.claude/: settings.example.json  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: article-illustrator.md  concretizer.md  edit-diff-learner.md  editor-review.md  empathy-designer.md  humanizer.md  memory-loader.md  novel-blueprint-architect.md  novel-chapter-director.md  novel-chapter-reviewer.md  novel-chapter-writer.md  novel-character-dna.md  novel-concept-builder.md  novel-foreshadowing-tracker.md  novel-outline-planner.md  opening-tournament.md  outline-architect.md  position-engine.md  pre-publish-review.md  research-expert.md  title-designer.md  topic-generator.md  topic-research.md  wechat-reader-test.md  writing-clarifier.md  writing-executor.md
.claude/styles/: jiubian.md  sanbiaobiao.md
.claude/workflows/: collab_v2.json
.kilo/agent/: article-illustrator.md  concretizer.md  edit-diff-learner.md  humanizer.md  (+22 more)
articles/: README.md
scripts/: auto_clean_hook.py  bootstrap_workspace.py  generate_clean.py  sync_config.py  update_run_manifest.py  validate_workflow.py  verify_required_files.py
tests/: test_auto_clean_hook.py  test_claude_runtime_sync.py  test_run_manifest.py  test_validate_workflow.py
writing-agent-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
writing-agent-app/src-tauri/: Cargo.toml  tauri.conf.json
writing-agent-app/src-tauri/src/: lib.rs  main.rs
(+72 files in other folders)
