[package]
name = "writing-agent-app"
version = "0.1.0"
description = "Desktop writing agent with Anthropic-compatible providers"
authors = ["Dante"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "writing_agent_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
